--- a/contact_manager/package.json
+++ b/contact_manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contact_manager",
-  "homepage": "cop4331-project.com",
+  "homepage": "http://cop4331-project.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
